TestSuite/errors/err0328.pas
{$includenamespace namespaces/err0328.pas}

begin

end.